# from_pixels_to_diagnosis_ml_and_image_sequences

./: .gitignore  LICENSE  README.md  analysis.ipynb  analysis_latex.ipynb  clean.py  config.py  convnext.py  convnext_data_handling.py  convnext_experiment.py  data_handling.py  data_module.py  datasets.py  eda.ipynb  image_processing.py  logging_and_model_evaluation.py  pl_module.py  pl_vivit.py  pl_vivit_experiment.py  pyproject.toml  requirements.txt  reviewer_response.md  vivit.py  vivit_data_handling.py  vivit_experiment.py
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  test-latex.sh
convnext_metrics/: convnext_cm_run_0.csv  convnext_cm_run_3.csv  convnext_cm_run_4.csv  convnext_cm_run_7.csv  convnext_cm_run_8.csv  convnext_validation_metrics_all_runs.csv
convnext_metrics_new/: convnext_cm_run_0.csv  convnext_cm_run_5.csv  convnext_validation_metrics_all_runs.csv
data/: wandb_experiment_data.csv
data_tools/: data_split.py  file_counters.py  image_sequence_tools.py  index_manager.py  sampling.py
docs/: index.html
latex/: abstract.tex  compile.sh  configuration.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  title.tex
latex/imgs/tikz/: recall.tex  (+8 more)
log_tools/: logger.py  metrics_manager.py
src/: config.py  convert_nifti_to_jpg.py  image_processing.py  vivit.py  vivit_data_handling.py  vivit_experiment.py
tikz/: accuracy.tex  mean_confusion_matrix_for_convnext.tex  mean_confusion_matrix_for_vivit.tex  precision.tex  recall.tex  total_confusion_matrix_for_convnext.tex  total_confusion_matrix_for_vivit.tex
(+55 files in other folders)
