[project]
name = "from-pixels-to-diagnosis-ml-and-image-sequences"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "accelerate",
    "datasets",
    "evaluate",
    "pandas",
    "torch",
    "scikit-learn",
    "torchvision",
    "transformers",
    "wandb",
    "nibabel>=5.4.2",
]
